<resources>
    <string name="app_name">khannasi</string>
    <string name="discussions">Discussions</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="back_button">Back</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_value">Last Name: %1$s</string>
    <string name="first_name">First Name</string>
    <string name="first_name_value">First Name: %1$s</string>
    <string name="username_without_space">Username(without space)</string>
    <string name="email">Email</string>
    <string name="email_value">Email: %1$s</string>
    <string name="contact_no">Contact no.</string>
    <string name="contact_no_value">Contact no.: %1$s</string>
    <string name="address">Address</string>
    <string name="address_value">Address: %1$s</string>
    <string name="select_state">Select state</string>
    <string name="select_country">Select country</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="html_preview">HTML Preview</string>
    <string name="description">Description</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="updated_by">Updated by: %1$s</string>
    <string name="username_value">Username: %1$s</string>
    <string name="test">Test</string>
    <string name="country">Country</string>
    <string name="country_value">Country: %1$s</string>
    <string name="state">State</string>
    <string name="state_value">State: %1$s</string>
    <string name="log_out">Log Out</string>
    <string name="account_information">Account Information</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="title">Post title</string>
    <string name="post">Post</string>
    <string name="category">Category</string>
    <string name="sub_categories">Sub categories</string>
    <string name="published_date">"Published date: "</string>
    <string name="put_just_value">%1$s</string>
    <string name="set_image_for_the_post">Set image for the post</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="cancel">Cancel</string>
    <string name="show_replies">Show replies</string>
    <string name="hide_replies">Hide replies</string>
    <string name="reply">Reply</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
</resources>