<!-- res/layout/fragment_user_details.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toStartOf="@+id/firstName"
                    android:scaleType="centerCrop"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/profile_picture"
                    android:src="@drawable/baseline_account_circle_24"
                    app:layout_constraintDimensionRatio="1:1"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"/>

            <TextView
                    android:id="@+id/firstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:text="@string/first_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/profilePicture"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                    android:id="@+id/lastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:text="@string/last_name"
                    app:layout_constraintTop_toBottomOf="@id/firstName"
                    app:layout_constraintStart_toEndOf="@id/profilePicture"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:text="@string/username"
                    app:layout_constraintTop_toBottomOf="@id/lastName"
                    app:layout_constraintStart_toEndOf="@id/profilePicture"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="8dp"
                android:text="@string/email"/>

        <TextView
                android:id="@+id/contactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="8dp"
                android:text="@string/contact_no" />

        <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="8dp"
                android:text="@string/address" />

        <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="8dp"
                android:text="@string/country" />

        <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="8dp"
                android:text="@string/state" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out"/>
    </LinearLayout>
</ScrollView>