<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
        <LinearLayout
                android:id="@+id/surveyor_form"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_border"
                    android:outlineAmbientShadowColor="@color/material_dynamic_tertiary80"
                    android:padding="10dp">
                <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lets_get_started"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#3F51B5"
                        android:gravity="center"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:layout_gravity="center"
                    app:startIconDrawable= "@drawable/baseline_account_circle_24"
                    android:hint="@string/first_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:layout_gravity="center"
                    app:startIconDrawable= "@drawable/baseline_account_circle_24"
                    android:hint="@string/last_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_gravity="center"
                    app:startIconDrawable= "@drawable/alternate_email_24px"
                    android:hint="@string/username_without_space"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_gravity="center"
                    app:startIconDrawable= "@drawable/alternate_email_24px"
                    android:hint="@string/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_gravity="center"
                    app:startIconDrawable= "@drawable/password_24px"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_gravity="center"
                    app:startIconDrawable= "@drawable/call_24px"
                    android:hint="@string/contact_no"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number|phone"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_gravity="center"
                    app:startIconDrawable= "@drawable/contact_mail_24px"
                    android:hint="@string/address"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:layout_gravity="center"
                    app:startIconDrawable= "@drawable/baseline_holiday_village_24"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        app:simpleItems="@array/countries"
                        android:hint="@string/select_country" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:layout_gravity="center"
                    app:startIconDrawable= "@drawable/apartment_24px"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                        android:id="@+id/state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        app:simpleItems="@array/states"
                        android:hint="@string/select_state" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUp"
                    android:layout_marginTop="16dp"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginPage"
                    android:layout_marginTop="16dp"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:layout_gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </LinearLayout>
</ScrollView>