<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/sign_in_form"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_border"
                    android:padding="10dp">
                <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#3F51B5"
                        android:gravity="center"
                        style="@style/TextAppearance.MaterialComponents.Headline6"/>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_gravity="center"
                    app:startIconDrawable="@drawable/alternate_email_24px"
                    android:hint="@string/username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_gravity="center"
                    app:startIconDrawable="@drawable/password_24px"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/signIn"
                    android:layout_marginTop="16dp"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_in"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUp"
                    android:layout_marginTop="16dp"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_up"/>
        </LinearLayout>
</ScrollView>